--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
                         <td>' + (feature.properties['20231107 Precinct Results_official — HD_Issue2Margin'] !== null ? autolinker.link(feature.properties['20231107 Precinct Results_official — HD_Issue2Margin'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
+                        <th scope="row">Issue 1-2 Swing</th>\
+                        <td>' + (feature.properties['20231107 Precinct Results_official — HD_RelativeMargin'] !== null ? autolinker.link(feature.properties['20231107 Precinct Results_official — HD_RelativeMargin'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
                         <th scope="row">Current Rep</th>\
                         <td>' + (feature.properties['20231107 Precinct Results_official — HD_CurrentRep'] !== null ? autolinker.link(feature.properties['20231107 Precinct Results_official — HD_CurrentRep'].toLocaleString()) : '') + '</td>\
                     </tr>\
